--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1444,7 +1444,13 @@ wizard.multi_file_restore_panel.title=File restore
 wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 wizard.multi_file_restore_panel.retrieving_success=File version information has been retrieved.
-wizard.multi_file_restore_panel.retrieving_none=Could not retrieve any file version information.
+wizard.multi_file_restore_panel.retrieving_none=No file version information available.
+
+wizard.multi_file_restoring_panel.title=Restoring file(s)
+wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
+
+wizard.multi_file_restoring_panel.success_title=Files restored
+wizard.multi_file_restoring_panel.success_text=The requested files have been restored.
 
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
