--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -383,7 +383,7 @@ pro.wizard.activation.password_confirm=Confirm
 pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
 pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
 pro.wizard.activation.limit_hit=Only {1} GBs data and {0} folders allowed.
-pro.wizard.activation.pro_activation={APPNAME} Pro Activation
+pro.wizard.activation.pro_activation={APPNAME} Activation
 pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.register_now=Sign up for an account
 pro.wizard.activation.register_now_trial=Please sign up for an free account to use {APPNAME}.
@@ -808,7 +808,7 @@ folder_repository.continue_exit=Exit anyways
 free_limit_dialog.buy_pro=Buy {APPNAME}
 free_limit_dialog.buy_recommendation2={APPNAME} is currently disabled until you take action.
 free_limit_dialog.buy_recommendation3=Support us by upgrading {APPNAME}\!
-free_limit_dialog.buy_recommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.heavy_usage_detected={APPNAME} has detected that you are extensively using it.
 free_limit_dialog.reason=Only {1} GBs data and {0} folders allowed.
 free_limit_dialog.reduce=Reduce usage
