Handle restore problems - refs #1765

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1442,12 +1442,17 @@ wizard.multi_file_restore_panel.retrieving=Retrieving file version information {
 wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 wizard.multi_file_restore_panel.retrieving_success=File version information has been retrieved.
 wizard.multi_file_restore_panel.retrieving_none=No file version information available.
+wizard.multi_file_restore_panel.button_latest=Latest version
+wizard.multi_file_restore_panel.button_date=Date specific version
 
 wizard.multi_file_restoring_panel.title=Restoring file(s)
 wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 
 wizard.multi_file_restoring_panel.success_title=Files restored
-wizard.multi_file_restoring_panel.success_text=The requested files have been restored.
+wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
+wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
+wizard.multi_file_restoring_panel.fail_title=File restore failed
+wizard.multi_file_restoring_panel.fail_text=No files have been restored. Problems have been logged.
 
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
