Dock info window, fixes #1796

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -982,6 +982,8 @@ low_memory.increase=Increase Memory
 low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
 low_memory.title=Low memory
 
+main_frame.inline_info_close.tip=Close information panel
+
 main_tabbed_pane.computers.description=Details about other computers
 main_tabbed_pane.computers.key=C
 main_tabbed_pane.computers.name=Computers
@@ -1158,6 +1160,7 @@ preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
+preferences.dialog.inline_info=Display information panel inline
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
 preferences.dialog.ui_locked=Lock on startup
