Add Windows Live mail default, fixes #1779

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -464,6 +464,7 @@ apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
 apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
+apps.dir.windows_mail=Windows Mail
 
 archive.no_backup=No backup
 archive.full_backup=Full backup
