--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/etc"/>
+	<classpathentry kind="src" path="src/jnotify"/>
 	<classpathentry kind="src" path="src/jwf"/>
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/main"/>
 	<classpathentry kind="src" path="src/skins"/>
-	<classpathentry kind="src" path="jnotify"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-cli-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
