--- a/build.xml
+++ b/build.xml
@@ -65,6 +65,7 @@ For creation of the installer:
 		<property name="src.dir" location="src" />
 		<property name="main.src.dir" location="src/main" />
 		<property name="jwf.src.dir" location="src/jwf" />
+		<property name="jnotify.src.dir" location="src/jnotify" />
 		<property name="etc.dir" location="src/etc" />
 		<property name="applet.dir" location="src/applet" />
 		<property name="demo.src.dir" location="src/demo" />
@@ -148,6 +149,7 @@ For creation of the installer:
 
 			<src path="${main.src.dir}" />
 			<src path="${jwf.src.dir}" />
+			<src path="${jnotify.src.dir}" />
 			<src path="${skins.src.dir}" />
 		</javac>
 
@@ -393,7 +395,7 @@ For creation of the installer:
 		<src path="${demo.src.dir}" />
 		<src path="${main.src.dir}" />
 		<src path="${jwf.src.dir}" />
-
+		<src path="${jnotify.src.dir}" />
 	</javac>
 
 	<copy file="${demo.src.dir}/demo/synth.xml" todir="${build.dir}/demo" />
