--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1161,7 +1161,7 @@ preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
-preferences.dialog.inline_info=Display information panel inline
+preferences.dialog.inline_info=Display detail information in same window
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
 preferences.dialog.ui_locked=Lock on startup
