--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -378,7 +378,7 @@ pro.wizard.activation.number_of_computers=Allowed computers
 pro.wizard.activation.number_gbs=Allowed data (GB)
 pro.wizard.activation.one_key_available=Login successful. Got one license key.
 pro.wizard.activation.order_additional=Order additional licenses here
-pro.wizard.activation.order_now=Upgrade {APPNAME}
+pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.password_confirm=Confirm
 pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
 pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
@@ -937,7 +937,7 @@ home_tab.tell_friend.text=Tell a friend about {APPNAME}
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 home_tab.total={0} total
 home_tab.you_have=You have
-pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 pro.home_tab.renew_license=Renew {APPNAME}
 pro.home_tab.remaining.tips=Your license will expire in {0} days
 pro.home_tab.remaining={0} day(s) remaining
