--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -806,7 +806,7 @@ folder_repository.warn_on_close_eta.text=These folders are not synchronized yet\
 folder_repository.warn_on_close.title=Synchronizing
 folder_repository.continue_exit=Exit anyways
 
-free_limit_dialog.buy_pro=Buy {APPNAME}
+free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_recommendation2={APPNAME} is currently disabled until you take action.
 free_limit_dialog.buy_recommendation3=Support us by upgrading {APPNAME}\!
 free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
