Ask to delete excess versioned files, fixes #1835

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1217,8 +1217,12 @@ settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchroniz
 settings_tab.add_a_pattern.title=Add ignore pattern
 settings_tab.add_patterns.text_1=The following ignore patterns will be added
 settings_tab.add_patterns.title=Add ignore patterns
+settings_tab.basedir.title=Base directory
+settings_tab.basedir.text=It is not possible to move a folder to the base directory.
 settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
 settings_tab.confirm_local_folder_move.title=Confirm move
+settings_tab.download_script=Script after download
+settings_tab.download_script.select=Select
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.title=Edit a pattern
 settings_tab.folder_not_empty.title=Folder not empty
@@ -1232,18 +1236,16 @@ settings_tab.move_content=Also move current folder contents?
 settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 settings_tab.move_error.temp=Could not create temporary folder
 settings_tab.move_error.title=Error moving folder contents
-settings_tab.select_directory.text=Select folder location
-settings_tab.subdir.title=Subdirectory
-settings_tab.subdir.text=It is not possible to move a folder to one of its subdirectories.
-settings_tab.basedir.title=Base directory
-settings_tab.basedir.text=It is not possible to move a folder to the base directory.
-settings_tab.working.description=The folder is being moved
-settings_tab.working.title=Moving folder
+settings_tab.offer_maintenance.title=Delete excess
+settings_tab.offer_maintenance.text=Delete any excess file versions now?
 settings_tab.preview_warning_title=Convert
 settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 settings_tab.preview_warning_convert=Convert
-settings_tab.download_script=Script after download
-settings_tab.download_script.select=Select
+settings_tab.select_directory.text=Select folder location
+settings_tab.subdir.title=Subdirectory
+settings_tab.subdir.text=It is not possible to move a folder to one of its subdirectories.
+settings_tab.working.description=The folder is being moved
+settings_tab.working.title=Moving folder
 
 skin.black_moon=Black Moon
 skin.black_star=Black Star
