Fixed to show version type column, fixes #1751

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -720,6 +720,8 @@ files_tab.flat_view.tip=Flatten view of folder directory structure
 file_versions_table_model.version=Version
 file_versions_table_model.size=Size
 file_versions_table_model.date=Date
+file_versions_table_model.local=Local version
+file_versions_table_model.online=Online version
 
 filter_text_field.clear.hint=Clear filtering
 filter_text_field.glass.hint=Select filter mode
