--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1072,7 +1072,7 @@ preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 preferences.dialog.use_delta_on_internet=on Internet
 preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.filesystem.watch=Instant file change detection
-preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to folders with periodic scanning only.
+preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a computer becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
