--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -874,6 +874,8 @@ general.neverAskAgain=Never ask this again
 general.not_available=not available
 general.ok.key=O
 general.ok=OK
+general.help.key=H
+general.help=Help
 general.preview_folder=Preview folder
 general.proxy_settings=Proxy settings
 general.saturday=Saturday
