--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,7 @@
 	<classpathentry kind="lib" path="lib/jmock/jmock-junit4-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/jmock/jmock-legacy-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/jmock/objenesis-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jcalendar.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/forms-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/validation-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/binding-2.0.1.jar"/>
