--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,7 @@ For creation of the installer:
 			<include name="h2-1.1.109.jar" />
 			<include name="ehcache-1.6.0.jar" />
 			<include name="l2fprod-common-directorychooser.jar" />
+      <include name="jcalendar.jar" />
 
 			<include name="synthetica/commons-logging-1.1.jar" />
 			<include name="synthetica/flexdock.jar" />
