Work on re-download function, refs #1798

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1454,10 +1454,12 @@ wizard.multi_file_restore_panel.retrieving=Retrieving file version information {
 wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 wizard.multi_file_restore_panel.retrieving_success=File version information has been retrieved.
 wizard.multi_file_restore_panel.retrieving_none=No file version information available.
-wizard.multi_file_restore_panel.button_latest=Latest version
-wizard.multi_file_restore_panel.button_date=Date specific version
-
-wizard.multi_file_restoring_panel.title=Restoring file(s)
+wizard.multi_file_restore_panel.button_latest=Latest version(s)
+wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
+wizard.multi_file_restore_panel.button_date=Date specific version(s)
+wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+wizard.multi_file_restore_panel.button_redownload=Re-download file(s)
+wizard.multi_file_restore_panel.button_redownload.tip=Mark deleted file(s) for download.
 wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 
 wizard.multi_file_restoring_panel.success_title=Files restored
