--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1118,6 +1118,10 @@ preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.skin_text=Skin
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
+preferences.dialog.information_panel=Information panel
+preferences.dialog.information_panel_separate=Separate window
+preferences.dialog.information_panel_left=Panel to left of the main panel
+preferences.dialog.information_panel_right=Panel to right of the main panel
 preferences.dialog.language=Language
 preferences.dialog.lan_line_settings=LAN speed
 preferences.dialog.line_settings=Internet speed
