--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1340,7 +1340,7 @@ transfers.queued=Queued
 transfers.remote_hashing=Preparing
 transfers.requested=Requested
 transfers.searching=Searching...
-transfers.swarm=Swarm: {0} members
+transfers.swarm=Multi: {0} sources
 transfers.to=To
 transfers.verifying=Finalizing
 
