refs #1826 Completely exctracted overall sync calculation into FolderRepoModel. Also using a more heuristic approach to detect "in sync" state: Simple is in sync when no synchronization action is running (upload, download or scan)

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -936,7 +936,9 @@ home_tab.online_storage.title=Account
 home_tab.sync_eta=All folders will be synchronized {0}
 home_tab.sync_unknown=Synchronization date unknown
 home_tab.status=Status
-home_tab.synchronizing=Synchronization in progress...
+home_tab.synchronizing.0=Synchronization in progress.
+home_tab.synchronizing.1=Synchronization in progress..
+home_tab.synchronizing.2=Synchronization in progress...
 home_tab.tell_friend.text=Tell a friend about {APPNAME}
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 home_tab.total={0} total
