--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -660,7 +660,7 @@ file_details_panel.available=Available
 file_details_panel.downloading=Downloading
 file_details_panel.location=Location
 file_details_panel.modified_by=Modified by
-file_details_panel.newer_available=Newer version available
+file_details_panel.newer_available=Newer version available ({0})
 file_details_panel.normal=Local available
 file_details_panel.not_available=Not available
 file_details_panel.status=Status
@@ -933,8 +933,8 @@ home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
 
 home_tab.online_storage.usage=Online usage: {0} ({1}%)
 home_tab.online_storage.title=Account
-home_tab.sync_eta=All folders will be synchronized {0}
-home_tab.sync_unknown=Synchronization date unknown
+home_tab.sync_eta=Estimated synchronized: {0}
+home_tab.sync_unknown=Estimated synchronized: Unknown
 home_tab.status=Status
 home_tab.synchronizing.0=Synchronization in progress.
 home_tab.synchronizing.1=Synchronization in progress..
