--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -287,12 +287,11 @@ pro.action_open_license_file.name=Open license file
 # Transfer Modes #
 ##################
 
-transfer_mode.auto_download_friends.name=Auto-download friends
 transfer_mode.automatic_download.name=Automatic download
-transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-transfer_mode.backup_source.name=Backup source (every 5 minutes)
-transfer_mode.backup_source_hour.name=Backup source (every hour)
+transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+transfer_mode.backup_source.name=Backup source (5 minutes)
+transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_target.name=Backup target
 transfer_mode.custom.name=Custom profile
 transfer_mode.disabled.name=Disabled
