Shows connected instead of last seen online for connected computer

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -624,6 +624,7 @@ estimation.unknown=unknown
 exp_computer_view.collapse=Collapse computer details
 exp_computer_view.expand=Expand computer details
 exp_computer_view.last_seen_text=Last seen online: {0}
+exp_computer_view.connected_text=Connected
 exp_computer_view.node_friend_connected_text=Connected friend computer
 exp_computer_view.node_friend_disconnected_text=Disconnected friend computer
 exp_computer_view.node_non_friend_connected_text=Connected non-friend computer
