Update archive maintenance text, refs #1871

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1248,8 +1248,9 @@ settings_tab.move_content=Also move current folder contents?
 settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 settings_tab.move_error.temp=Could not create temporary folder
 settings_tab.move_error.title=Error moving folder contents
-settings_tab.offer_maintenance.title=Delete excess
-settings_tab.offer_maintenance.text=Delete any excess file versions now?
+settings_tab.offer_maintenance.title=Cleanup archive
+settings_tab.offer_maintenance.text=Cleanup file archive?
+settings_tab.offer_maintenance.cleanup_button=Cleanup
 settings_tab.preview_warning_title=Convert
 settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 settings_tab.preview_warning_convert=Convert
