--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -362,7 +362,7 @@ pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.computers_allowed=Computers allowed\:
 pro.wizard.activation.computers_found=Computers found\:
 pro.wizard.activation.confirm_key=Please confirm the following activation data.
-pro.wizard.activation.contact_support=Contact the support
+pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_reading_file=Error while reading license key file
 pro.wizard.activation.error_unable_to_read=Unable to read
@@ -427,8 +427,8 @@ tip_of_the_day.text_3=Demo Tip of the Day 3
 # Everything Else #
 ###################
 
-about_dialog.check_for_updates.key=C
-about_dialog.check_for_updates.text=Check
+about_dialog.check_for_updates.key=U
+about_dialog.check_for_updates.text=Updates
 about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 about_dialog.contributers=Contributers
 about_dialog.documentation=Documentation
@@ -444,7 +444,7 @@ about_dialog.send_bug_report.key=R
 about_dialog.send_bug_report.text=Report
 about_dialog.send_bug_report.tips=Send a bug report to {APPNAME}
 about_dialog.support=Support
-about_dialog.sync_your_world=Sync your World
+about_dialog.app_description={APPDESCRIPTION}
 about_dialog.system_monitor.key=M
 about_dialog.system_monitor.text=Monitor
 about_dialog.system_monitor.tips=Display a system monitor panel
@@ -939,7 +939,7 @@ home_tab.status=Status
 home_tab.synchronizing.0=Synchronization in progress.
 home_tab.synchronizing.1=Synchronization in progress..
 home_tab.synchronizing.2=Synchronization in progress...
-home_tab.tell_friend.text=Tell a friend about {APPNAME}
+home_tab.tell_friend.text=Tell someone about {APPNAME}
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 home_tab.total={0} total
 home_tab.you_have=You have
