Added wiki link to memory configuration on out of memory error

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -986,7 +986,7 @@ low_memory.do_nothing=Do Nothing
 low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 low_memory.error.title=Out of memory
 low_memory.increase=Increase Memory
-low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information:\n{0}
 low_memory.title=Low memory
 
 main_frame.inline_info_close.tip=Close information panel
