Allow archive purge, refs #1716

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -472,6 +472,7 @@ archive_mode_selector_panel.none=None
 archive_mode_selector_panel.unlimited=Unlimited
 archive_mode_selector_panel.version={0} version
 archive_mode_selector_panel.versions={0} versions
+archive_mode_selector_panel.purge.tip=Purge entire archive
 
 chat_frame.title=Chat
 chat_frame.tool_tip=Chat with {0}
@@ -1259,6 +1260,11 @@ settings_tab.subdir.title=Subdirectory
 settings_tab.subdir.text=It is not possible to move a folder to one of its subdirectories.
 settings_tab.working.description=The folder is being moved
 settings_tab.working.title=Moving folder
+
+settings_tab.purge_archive_purge=Purge
+settings_tab.purge_archive_title=Purge archive
+settings_tab.purge_archive_message=Purge the entire folder archive?
+settings_tab.purge_archive_problem=Sorry, the archive could not be purged.
 
 skin.black_moon=Black Moon
 skin.black_star=Black Star
