Big CDN branding

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -123,7 +123,7 @@ action_invite_advanced.description=Show advanced options
 action_invite_advanced.key=A
 action_invite_advanced.name=Advanced options
 
-action_invite_friend.description=Invite a friend to join this folder
+action_invite_friend.description=Invite someone to join this folder
 action_invite_friend.key=I
 action_invite_friend.name=Invite
 
@@ -495,7 +495,7 @@ check_status.title=Status of My Folders
 computers_tab.no_computers_available=No computers available
 computers_tab.show_offline=Show offline
 
-connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\n{APPNAME} automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
+connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\n{APPNAME} automatically connects to the network after a short time.\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a computer
 
 computers_list.my_computers=My Computers
@@ -1078,7 +1078,7 @@ preferences.dialog.use_delta_on_internet=on Internet
 preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.filesystem.watch=Instant file change detection
 preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
-preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
+preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a computer becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.title=Dialogs
@@ -1494,8 +1494,8 @@ wizard.send_invitations.title=Send Invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
 wizard.send_invitations_advanced.title=Send Invitation - Advanced
-wizard.send_invitations.add_message.text=Attach personalized message
-wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
+wizard.send_invitations.add_message.text=Add a message
+wizard.send_invitations.add_message.tip=Add a message for the recipient
 wizard.send_invitations.no_invitees=No invitees. Please try again.
 wizard.send_invitations.sending_invites=Sending invite
 wizard.send_invitations.sending_invites.text=Please wait while sending invite.
