Big CDN branding

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -570,7 +570,7 @@ dialog.node_select.multi_computers=Multiple computers selected
 dialog.node_select.no_computers=No computers selected
 dialog.node_select.text=Select computers to invite. Hold down Ctrl key to select multiple computers.
 dialog.node_select.title=Select computers
-dialog.personalized_message.hint=Add a personalized message for the recipient
+dialog.personalized_message.hint=Add a message for the recipient
 dialog.restore_archive.title=Restore archived file
 dialog.restore_archive.save_error=There was a problem saving the file to disk: {0}
 dialog.restore_archive.restore=Restore file version to its original location
